--- a/templates/home.html
+++ b/templates/home.html
@@ -2,13 +2,14 @@
 {% block title %}Home{% endblock title %}
 {% block content %}
 {% if user.is_authenticated %}
-<!-- new code here! -->
 Hi {{ user.username }}! You are {{ user.age }} years old.
-<!-- end of new code -->
 <form action="{% url 'logout' %}" method="post">
     {% csrf_token %}
     <button type="submit">Log Out</button>
 </form>
+<br />
+<p><a class="btn btn-primary" href="{% url 'article_list' %}" role="button">
+        View all articles</a></p> <!-- new -->
 {% else %}
 <p>You are not logged in</p>
 <a href="{% url 'login' %}">Log In</a> |
