permission and authorization

--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -6,9 +6,12 @@
     <p>{{ object.body }}</p>
 </div>
 <div>
-    <p><a href="{% url 'article_edit' object.pk %}">Edit</a> |
+    {% if object.author == request.user %}
+    <p>
+        <a href="{% url 'article_edit' object.pk %}">Edit</a> |
         <a href="{% url 'article_delete' object.pk %}">Delete</a>
     </p>
+    {% endif %}
     <p>Back to <a href="{% url 'article_list' %}">All Articles</a>.</p>
 </div>
 {% endblock content %}
