--- a/templates/article_list.html
+++ b/templates/article_list.html
@@ -12,12 +12,12 @@
             {{ article.date }}</span>
     </div>
     <div class="card-body">
-        {{ article.body }}
-    </div>
-    <div class="card-footer text-center text-muted">
-        <!-- new links here! -->
+        <p>{{ article.body }}</p>
+        {% if article.author == request.user %}
         <a href="{% url 'article_edit' article.pk %}">Edit</a> |
-        <a href="{% url 'article_delete' article.pk %}">Delete</a>
+        <a href="{% url 'article_delete' article.pk %}">Delete</a> |
+        {% endif %}
+        <a href="{{ article.get_absolute_url }}">New Comment</a>
     </div>
 </div>
 <br />
